[project]
name = "pyportiscanner"
version = "0.1.1"
description = "TCP Port Scanner básico en Python"
readme = "README.pypi.md"
authors = [{ name = "ortisec", email = "ortizjose1604@gmail.com"}]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
pps = "pyportiscanner.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pyportiscanner"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
